2010-01-14  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el: Revert the previous change because it
	didn't work in some cases.
	(slime-repl-map-mode): New minor mode which sole purpose is to
	enable `slime-repl-mode-map'.
	(slime-repl-mode): Enable `slime-repl-map-mode' after enabling
	`slime-editing-map'.
	This will finally allow `slime-repl-mode-map' to take precedence of
	`slime-editing-map'.

2010-01-14  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-mode-map): Use both
	`slime-editing-map' and `lisp-mode-map' as parent keymaps.
	(slime-repl-mode): Don't use `slime-editing-mode' because
	its keymap is already used above.
	That way `slime-repl-mode-map' takes precedence of
	`slime-editing-map'.

2010-01-08  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp: Doing list-all-systems-in-central-registry
	might be quite slow since it accesses a file-system,
	so run it once at the background to initialize fs caches.

2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (interesting-variable-p): Exclude keywords
	from being candidates for "display variable content" autodoc
	feature.
	(print-decoded-arglist): Slightly better arglist printing if
	`slime-autodoc-use-multiline-p' is true.
	(parse-raw-form): Make it able to parse strings.

	* slime-autodoc.el (autodoc.1 [test]): Add more cases.

2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-autodoc.el (slime-check-autodoc-at-point): Bind
	`slime-autodoc-use-multiline-p' to nil for normalized test
	results.

2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (extract-cursor-marker): Make sure to
	recurse only if the form, to be recursed into, is a cons.

	Reported by Johannes Grødem.

2010-01-06  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (arglist-dispatch ['declare]): Normalize
	`vars' to `variables'.
	(arglist-for-type-declaration): Ditto.

	* slime-autodoc (autodoc.1 [test]): Reorganize test, add comments,